--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" media="screen and (orientation: portrait) and
     (max-width:1024px), projection" href="./css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
