--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" media="screen and (orientation: portrait) and
-    (max-width:1024px), projection" href="./css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@0;1&family=DM+Sans:ital@0;1&family=Oswald&family=Playfair+Display:wght@700&family=Poppins:ital@0;1&family=Raleway:ital,wght@0,100;0,400;1,400&family=Roboto:ital,wght@1,300&family=Vollkorn:ital@1&display=swap" rel="stylesheet">
@@ -30,6 +28,18 @@
                             <li>Contact</li>
                         </ul>
                     </div>
+                    <div class="hamburger-menu">
+                        <input id="menu__toggle" type="checkbox" />
+                        <label class="menu__btn" for="menu__toggle">
+                          <span></span>
+                        </label>
+                        <ul class="menu__box">
+                          <li><a class="menu__item" href="#">Home</a></li>
+                          <li><a class="menu__item" href="#">Episodes</a></li>
+                          <li><a class="menu__item" href="#">About</a></li>
+                          <li><a class="menu__item" href="#">Contact</a></li>            
+                        </ul>
+                      </div>
                 </div>
             </div>
         </div>
@@ -255,6 +265,7 @@
      
 
 
-    <script src="./js/js.js"></script>
+    <script src="./js.js"></script>
 </body>
 </html>
+
