--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+  />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cardo:ital@0;1&family=DM+Sans:ital@0;1&family=Oswald&family=Playfair+Display:wght@700&family=Poppins:ital@0;1&family=Raleway:ital,wght@0,100;0,400;1,400&family=Roboto:ital,wght@1,300&family=Vollkorn:ital@1&display=swap" rel="stylesheet">
@@ -50,15 +53,17 @@
                         <img src="./assets/image/header/qwerty.png" alt="">
                     </div>
                     <div class="flex__right">
-                        <h1>Take your<br>podcast to the <span class="header__span">next</span> <span class="flex__span">level</span></h1>
-                        <p>Listen on</p>
-                        <div class="flex__img">
-                            <img src="./assets/image/header/spoti.png" alt="">
-                            <img src="./assets/image/header/muz.png" alt="">
-                            <img src="./assets/image/header/img.png" alt="">
-                            <img src="./assets/image/header/iph.png" alt="">
-                            <img src="./assets/image/header/anten.png" alt="">
+                        <h1>Take your<br>podcast to the <br class="br"> <span class="header__span">next</span> <span class="flex__span">level</span></h1>
+                        <div class="flex__div">                        <p>Listen on</p>
+                            <div class="flex__img">
+                                <img src="./assets/image/header/spoti.png" alt="">
+                                <img src="./assets/image/header/muz.png" alt="">
+                                <img src="./assets/image/header/img.png" alt="">
+                                <img src="./assets/image/header/iph.png" alt="">
+                                <img src="./assets/image/header/anten.png" alt="">
+                            </div>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -78,7 +83,7 @@
                     <div class="episodes__text__three">
                         <button class="episodes__mid__but">Gear</button>
                         <p class="episodes__teg-p-three">Episode 3</p>
-                        <h2>Should you get outboard audio gear?</h2>
+                        <h2 class="episodes__h__three">Should you get outboard audio gear?</h2>
                         <p class="episodes__foot-p">Is hardware really worth it when it comes to podcasting? The answer is...it depends. Here’s our reasons on why you might want to consider picking something up.</p>
                         <button class="episodes__foot-but">View Episode Details</button>
                     </div>
@@ -220,7 +225,7 @@
         <div class="container">
             <div class="footer__block">
                 <div class="footer__left">
-                    <img src="./assets/image/footer/logo.png" alt="" >
+                    <img class="footer__img" src="./assets/image/footer/logo.png" alt="" >
                     <div class="footer__inside-left">
                         <img src="./assets/image/footer/inst.png" alt="" >
                         <img src="./assets/image/footer/twit.png" alt="" >
@@ -266,6 +271,7 @@
 
 
     <script src="./js.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    
 </body>
 </html>
-
